--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-im",
-  "version": "0.0.4",
+  "version": "0.0.7",
   "description": "The server for server-im",
   "main": "index.js",
   "scripts": {
@@ -13,10 +13,20 @@
   "email": "403476891@qq.com",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
-  },
-  "devDependencies": {
     "assert": "^1.4.1",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "express": "^4.16.2",
+    "html-webpack-plugin": "^2.30.1",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.8.0",
+    "pug": "^2.0.0-rc.4",
     "webpack": "^3.10.0"
-  }
+  },
+  "_from": "server-im@0.0.6",
+  "_resolved": "http://registry.npm.taobao.org/server-im/download/server-im-0.0.6.tgz"
 }
