--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.9",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
     "pug": "^2.0.0-rc.4",
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
