--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The server for server-im",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node ./server/src/index.js"
   },
   "bin": {
     "server-im": "./bin/server-im.js"
